dodanie strony z produktami i koszyka

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -8,4 +8,5 @@
   --main-medium-slate-blue-color: #886bf2;
   --main-plum-color: #fda8ea;
   --main-giants-orange-color: #ff5c2f;
+  --main-danger-color: #ff2727;
 }
