--- a/styles/globals.css
+++ b/styles/globals.css
@@ -21,4 +21,5 @@
   --alert-success-color: #7aff7ab0;
   --alert-danger-color: #ffb2b2b0;
   --alert-default-color: #858585b0;
+  --default-box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
 }
