--- a/styles/globals.css
+++ b/styles/globals.css
@@ -22,4 +22,5 @@
   --alert-danger-color: #ffb2b2b0;
   --alert-default-color: #858585b0;
   --default-box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+  --lavender-color: #e6e6ea;
 }
