zmiana kolorów dla produktów bez właściwości

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -13,6 +13,7 @@
   --dark-text-color: #000;
   --border-color-for-image: #ccc;
   --gray-color: #858585;
+  --no-properties-color: rgba(187, 187, 187, 0.699);
   --border-color-for-under: #cfcfcf;
   --border-color-light: #cfcfcf;
   --light-color: #fff;
