--- a/styles/globals.css
+++ b/styles/globals.css
@@ -22,6 +22,6 @@
   --alert-success-color: #7aff7ab0;
   --alert-danger-color: #ffb2b2b0;
   --alert-default-color: #858585b0;
-  --default-box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+  --default-box-shadow: 0px 3px 16px 0px rgba(18, 18, 18, 0.4);
   --lavender-color: #e6e6ea;
 }
