dodanie hover-text-color

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -24,4 +24,5 @@
   --alert-default-color: #858585b0;
   --default-box-shadow: 0px 3px 16px 0px rgba(18, 18, 18, 0.4);
   --lavender-color: #e6e6ea;
+  --hover-text-color: #000000ad;
 }
