--- a/styles/globals.css
+++ b/styles/globals.css
@@ -7,6 +7,7 @@
   --main-deep-pink-color: #ff2b8e;
   --main-medium-slate-blue-color: #886bf2;
   --main-plum-color: #fda8ea;
+  --newsletter-color: #fda8eb6c;
   --main-giants-orange-color: #ff5c2f;
   --main-danger-color: #ff1c1c;
   --light-text-color: #fff;
