zmieniono kolor nawigacji, dodano dodatkowe informacje

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -19,11 +19,13 @@
   --border-color-light: #cfcfcf;
   --light-color: #fff;
   --main-background-color: #fff;
-  --nav-color: #222;
+  --nav-color: #fff;
+  --footer-color: #222;
   --error-bg-color: #ffb2b2;
   --alert-success-color: #7aff7ab0;
   --alert-danger-color: #ffb2b2b0;
   --alert-default-color: #858585b0;
   --default-box-shadow: 0px 3px 16px 0px rgba(18, 18, 18, 0.4);
   --hover-text-color: #000000ad;
+  --nav-border-bottom-color: rgba(203, 203, 203, 0.8);
 }
