--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,4 +1,5 @@
-@import url('https://fonts.googleapis.com/css2?family=Almendra&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Almendra&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Roboto&display=swap");
 
 :root {
   --main-maize-color: #ffef5c;
